@@ -1,6 +1,7 @@
 package im.haugsdal;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.apache.cxf.Bus;
 import javax.xml.ws.Endpoint;
@@ -9,7 +10,6 @@ import org.apache.cxf.jaxrs.swagger.Swagger2Feature;
 import org.apache.cxf.jaxws.EndpointImpl;
 import org.apache.cxf.endpoint.Server;
 import org.apache.cxf.jaxrs.JAXRSServerFactoryBean;
-import org.apache.cxf.jaxws.JaxWsServerFactoryBean;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
@@ -47,15 +47,15 @@ public class Main {
         JAXRSServerFactoryBean endpoint = new JAXRSServerFactoryBean();
         endpoint.setBus(bus);
         endpoint.setAddress("http://localhost:8888/rest");
-        endpoint.setServiceBean(new FruitServiceImpl());
-        endpoint.setFeatures(Arrays.asList(new Swagger2Feature()));
+        endpoint.setServiceBean(new CarServiceImpl());
+        endpoint.setFeatures(List.of(new Swagger2Feature()));
         return endpoint.create();
     }
 
 
     @Bean
     public Endpoint endpoint() {
-        EndpointImpl endpoint = new EndpointImpl(bus, new FruitServiceImpl());
+        EndpointImpl endpoint = new EndpointImpl(bus, new CarServiceImpl());
         endpoint.setAddress("http://localhost:8080");
         endpoint.publish("/Hello");
         return endpoint;
